# esp32-s3-heltec-zephyr

./: .clang-format  .gitignore  CHANGELOG.md  README.md  zephyr-mac.code-workspace  zephyr-windows.code-workspace
app/: CMakeLists.txt  Kconfig  prj.conf  west.yml
app/boards/: heltec_wifi_lora32_v2_procpu.overlay  heltec_wifi_lora32_v3_procpu.overlay
app/dts/bindings/: relay.yaml
app/src/: main.c
app/src/modules/battery/: battery.c  battery_zbus.h
app/src/modules/ble/: ble.c  ble_characteristics.h  ble_zbus.h  utils.h
app/src/modules/controller/: controller.c  controller_zbus.h  farming.c  farming.h
app/src/modules/environment/: environment.c  environment_zbus.h
app/src/modules/info/: info.c  info_zbus.h
app/src/modules/mqtt/: mqtt.c  mqtt_zbus.h
app/src/modules/rtc/: rtc.c  rtc_zbus.h
app/src/modules/storage/: storage.c  storage_const.h  storage_zbus.h
app/src/modules/user_interface/: user_interface.c  user_interface_zbus.h
app/src/modules/water_level/: water_level.c  water_level_zbus.h
app/src/modules/water_management/: water_management.c  water_management_zbus.h
app/src/modules/wifi/: wifi.c  wifi_zbus.h
app/src/zbus/actuators/: buzzer.h  water_pump.h  water_valve.h  zbus_actuators.c
app/src/zbus/config/: ble.h  farming.h  mode.h  sensors.h  user.h  wifi.h  zbus_config.c
app/src/zbus/info/: device.h  firmware.h  hardware.h  zbus_info.c
app/src/zbus/sensors/: battery.h  co.h  humidity.h  pressure.h  rtc.h  temperature.h  water_level.h  zbus_sensors.c
app/src/zbus/status/: ble.h  mqtt.h  water_pump.h  water_valve.h  wifi.h  (+1 more)
(+17 files in other folders)
